--- a/RecipeApp/RecipeApp.csproj
+++ b/RecipeApp/RecipeApp.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Blazored.Toast" Version="3.2.2" />
     <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="Majorsoft.Blazor.Components.Loading" Version="1.5.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
