Duplicate record added & Tags Guid needs to be check as well. UI Updated

--- a/RecipeApp/RecipeApp.csproj
+++ b/RecipeApp/RecipeApp.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\EventHelper.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <_ContentIncludedByDefault Remove="Pages\AdminREcipe.razor" />
+    <_ContentIncludedByDefault Remove="wwwroot\EventHelper.cs" />
   </ItemGroup>
 
   <ItemGroup>
